# NRIFramework

./: .gitignore  .gitmodules  1-Deploy.bat  2-Build.bat  CMakeLists.txt
Include/: CmdLine.h  Helper.h  NRIFramework.h  Utils.h
Shaders/: UI.fs.hlsl  UI.vs.hlsl
Source/: Camera.cpp  DebugAllocator.cpp  SampleBase.cpp  Utils.cpp
